[package]
name = "td_proto_rust"
version = "0.1.4"
authors = [ "tickbh <tickdream125@hotmail.com>" ]

description = "bin protocol for Rust"
repository = "https://github.com/tickbh/td_proto_rust"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["protocol", "GoogleProtocolBuffer"]

[dependencies]
rustc-serialize = "0.3.16"